--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
+    "@angular/flex-layout": "^2.0.0-rc.1",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/material": "^2.0.0-beta.2",
@@ -24,6 +26,7 @@
     "angular2-jwt": "^0.2.0",
     "auth0-lock": "^10.13.0",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "ng2-slim-loading-bar": "^2.4.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
